# IoTServer

./: CMakeLists.txt  README.md  conanfile.py  setupDev.bat  setupRelease.sh
Server/: CMakeLists.txt  Util.cpp  Util.h  config.json  main.cpp
Server/DB/: DBStatics.cpp  DBStatics.h
Server/controllers/: Alarm.cpp  Alarm.h  Auth.cpp  Auth.h  Dashboard.cpp  Dashboard.h  Measurements.cpp  Measurements.h
Server/static/: main.css  renderchart.js
Server/views/: home.cc  home.csp  login.cc  login.csp
